tests/fixtures/pass/property-array-type.php
<?php

declare(strict_types=1);

namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @var array<int,string>
     */
    public $id;
}
