tests/fixtures/fail/property-annotation.php
<?php
namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @Bar
     */
    public $id;
}